2001-11-13  Tim Waugh  <twaugh@redhat.com>
        * ieee1284.h: Corrected comments above ieee1284_wait_status and
        ieee1284_do_nack_handshake.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 2001-11-13  Tim Waugh  <twaugh@redhat.com>
 
 	* ieee1284.h: s/st/dt/ in ieee1284_write_data prototype.
+	Corrected comments above ieee1284_wait_status and
+	ieee1284_do_nack_handshake.
 
 	* deviceid.c (get_fresh): Honour buffer length properly.
 	Don't terminate with 0 unless the entire ID fits in the buffer.
