2001-11-18  Tim Waugh  <twaugh@redhat.com>
        * configure.in: Version 0.1.1 (devel).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2001-11-18  Tim Waugh  <twaugh@redhat.com>
 
+	* configure.in: Version 0.1.1 (devel).
+
+2001-11-18  Tim Waugh  <twaugh@redhat.com>
+
 	* access_ppdev.c (frob_control): Messy calculations to deal with
 	inverted pins.
 	* access_io.c (raw_frob_control): Likewise.
