--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,10 @@
 2001-11-29  Tim Waugh  <twaugh@redhat.com>
 
+	* ieee1284.h: New error code E1284_NOID.
 	* deviceid.c (get_fresh): Return E1284_NOID if there was no ID to
 	read.
+
+	* ieee1284.h: New error code E1284_INVALIDPORT.
 
 2001-11-22  Tim Waugh  <twaugh@redhat.com>
 
