2001-11-29  Tim Waugh  <twaugh@redhat.com>
        * debug.c, debug.h: New function ieee1284_display_status for
        debugging.

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,9 @@
 
 	* ieee1284.h: New error code E1284_INVALIDPORT.
 
+	* debug.c, debug.h: New function ieee1284_display_status for
+	debugging.
+
 2001-11-22  Tim Waugh  <twaugh@redhat.com>
 
 	* default.c (LOG_ERROR): We now have dprintf, so this is not
