--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-05  Tim Waugh  <twaugh@redhat.com>
+
+	* access_ppdev.c (init): Initialize port->current_mode.
+
 2002-01-04  Tim Waugh  <twaugh@redhat.com>
 
 	* state.c (ieee1284_open): Check that the port is not already
