--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2002-01-05  Tim Waugh  <twaugh@redhat.com>
 
+	* access_ppdev.c (which_mode): New function.
+	(set_mode): Use it.
+	(negotiate): New function.
+	(terminate): New function.
+	(ppdev_access_methods): Use them.
+
 	* access_ppdev.c (init): Initialize port->current_mode.
 
 2002-01-04  Tim Waugh  <twaugh@redhat.com>
