--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2002-01-05  Tim Waugh  <twaugh@redhat.com>
 
+	* access_ppdev.c (which_mode): Pass through modes with flags set.
+
 	* access_ppdev.c (set_mode): Translate the error code returned by
 	ioctl.
 
