--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2002-01-06  Tim Waugh  <twaugh@redhat.com>
 
+	* state.c (init_port): Use the right access methods for non-ppdev
+	port types.
 	* access_io.c (init): Don't invert the return value of ioperm.
 	Spotted by Simon Krix.
 
