--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-06  Ken Easton  <s3159795@student.anu.edu.au>
+
+	* configure.in: Don't check for a C++ compiler, since we don't need
+	one.
+
 2002-01-06  Tim Waugh  <twaugh@redhat.com>
 
 	* state.c (init_port): Use the right access methods for non-ppdev
