--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,10 @@
 libieee1284 news
 ----------------
 
+0.1.3 (devel)
+
+	Several major bugs were fixed.
+
 0.1.2 (devel)
 
 	This release includes a better interface, and more support for
