--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-14  Tim Waugh  <twaugh@redhat.com>
+
+	* ieee1284.h: Enforce C linkage.
+
 2002-01-07  Tim Waugh  <twaugh@redhat.com>
 
 	* configure.in, Makefile.am: Version 0.1.3 (devel).
