--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2002-01-16  Tim Waugh  <twaugh@redhat.com>
 
+	* ports.c (add_port): Set hibase_addr as well.
+	(populate_from_sys_dev_parport): Find out ECR address.
+
 	* ieee1284.h: Remove port->modes, since that's returned from
 	ieee1284_open now.
 
