--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2002-01-16  Tim Waugh  <twaugh@redhat.com>
 
+	* test.c: Better output.
+
 	* default.c (default_terminate): Don't wait for SELECT.
 	(default_nibble_read): Check nDataAvail.
 
