--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2002-01-16  Tim Waugh  <twaugh@redhat.com>
 
+	* configure.in, Makefile.am: Version 0.1.4 (devel).
+
+2002-01-16  Tim Waugh  <twaugh@redhat.com>
+
 	* test.c: Better output.
 
 	* default.c (default_terminate): Don't wait for SELECT.
