--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-04-08  Tim Waugh  <twaugh@redhat.com>
+
+	* access_io.c (cleanup): Prevent double-freeing of port->fn.  Patch
+	from Matthew Duggan <stauff@guarana.org>.
+
 2002-01-16  Tim Waugh  <twaugh@redhat.com>
 
 	* configure.in, Makefile.am: Version 0.1.4 (devel).
