--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2002-04-09  Tim Waugh  <twaugh@redhat.com>
+
+	* test.c (field): Avoid crashing on bad input.
+	(show_capabilities): Fix compiler warning.
+	(test_open): More compiler warning fixes.
+
+	* ports.c: Include debug.h for dprintf.
+
 2002-04-08  Tim Waugh  <twaugh@redhat.com>
 
 	* access_io.c (cleanup): Prevent double-freeing of port->fn.  Patch
