--- a/TODO
+++ b/TODO
@@ -12,7 +12,7 @@ Still to do:
 
 - Default implementation of ECP direction switching functions.
 
-- F1284_EXCL for iopl() and /dev/port.
+- F1284_EXCL for iopl() and /dev/port (use /dev/lp0).
 
 - Default implementations of the block transfer functions, in terms of
   the pins.
