--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,11 @@
 libieee1284 news
 ----------------
 
+0.1.5 (devel)
+
+	Some small clean-ups were made, as well as the last interface
+	change before the stable branch begins.
+
 0.1.4 (devel)
 
 	Some minor bugs were fixed in the direct access code, and a silly
