2002-04-24  Tim Waugh  <twaugh@redhat.com>
        * configure.in, Makefile.am: Version 0.1.6 (devel).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2002-04-24  Tim Waugh  <twaugh@redhat.com>
 
+	* configure.in, Makefile.am: Version 0.1.6 (devel).
+
+2002-04-24  Tim Waugh  <twaugh@redhat.com>
+
 	* Makefile.am: New directory structure.  Build man pages.
 	* configure.in: Update.  Use automake 1.6 and autoconf 2.53.
 	* access.h, access_io.c, blockio.c, debug.c, debug.h, default.c,
