--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-04-26  Tim Waugh  <twaugh@redhat.com>
+
+	* Makefile.am: No need to run docbook2man twice now that docbook-utils
+	can resolve references on its own now.
+
 2002-04-24  Tim Waugh  <twaugh@redhat.com>
 
 	* configure.in, Makefile.am: Version 0.1.6 (devel).
