--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,10 @@
 libieee1284 news
 ----------------
 
+0.1.7 (devel)
+
+	Support for more platforms was added.
+
 0.1.6 (devel)
 
 	The directory structure was reorganised.
