2002-08-03  Tim Waugh  <twaugh@redhat.com>
        * configure.in, Makefile.am: Version 0.2.0 (stable).

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,10 @@
 libieee1284 news
 ----------------
 
+0.2.0 (stable)
+
+	First release of the stable branch.
+
 0.1.7 (devel)
 
 	Support for more platforms was added.
