--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-03  Tim Waugh  <twaugh@redhat.com>
+
+	* configure.in, Makefile.am: Version 0.2.0 (stable).
+
 2002-07-31  Tim Waugh  <twaugh@redhat.com>
 
 	* configure.in, Makefile.am: Version 0.1.7 (devel).
