--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-07  Tim Waugh  <twaugh@redhat.com>
+
+	* src/access_ppdev.c (negotiate): Return E1284_NEGFAILED and
+	E1284_REJECTED when appropriate, instead of E1284_SYS.
+
 2002-08-03  Tim Waugh  <twaugh@redhat.com>
 
 	* configure.in, Makefile.am: Version 0.2.0 (stable).
