--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-08  Tim Waugh  <twaugh@redhat.com>
+
+	* src/access_ppdev.c (negotiate): Fix compile error.
+
 2002-08-07  Tim Waugh  <twaugh@redhat.com>
 
 	* doc/interface.xml (transfer): Clarify the meaning of the buffer
