--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-09  Tim Waugh  <twaugh@redhat.com>
+
+	* src/interface.c: Sprinkle dprintf calls throughout.
+
 2002-08-08  Tim Waugh  <twaugh@redhat.com>
 
 	* src/debug.c: Include sys/types.h for C99.
