--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2002-08-09  Tim Waugh  <twaugh@redhat.com>
 
+	* src/debug.c (dprintf): Check that stderr is open.
+
 	* src/interface.c: Sprinkle dprintf calls throughout.
 
 2002-08-08  Tim Waugh  <twaugh@redhat.com>
